example-api-config/example-api-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-api
spec:
  selector:
    matchLabels:
      app: example-api
  template:
    metadata:
      labels:
        app: example-api
    spec:
      containers:
      - name: example-api
        image: curity/example-api:1.0
        ports:
        - containerPort: 3000
